--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -43,7 +43,7 @@ header .header-links {
   line-height: 100px;
 }
 
-.post-login-link {
+.unused-link {
   display: none;
 }
 
@@ -122,6 +122,108 @@ main .section button {
   border-radius: 5px;
 }
 
+/* FOOTER */
+
+footer {
+  background-color: #013144;
+  height: 100px;
+  text-align: center;
+}
+
+footer p {
+  line-height: 100px;
+  font-size: 16px;
+  color: #e8ebec;
+  margin-top: 0;
+}
+
+/* CREATE ACCOUNT */
+
+.section .form-title {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #013144;
+  padding-top: 40px;
+}
+
+.create-acc-container {
+  max-width: 740px;
+  margin: 0 auto;
+}
+
+.create-acc-form {
+  height: calc(100% - 83px);
+  padding-top: 10px;
+  margin-bottom: 0;
+}
+
+.form-section {
+  margin-top: 20px;
+  height: 35%;
+  padding: 0 0 0 10px;
+}
+
+.form-section-title {
+  margin: 0 0 10px 0;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 100;
+  color: #013144;
+  text-align: left;
+}
+
+div.form-field {
+  width: 50%;
+  float: left;
+  padding-bottom: 5px;
+}
+
+div.form-field .left {
+  float: left;
+}
+
+div.form-field #form-gender {
+  width: 40%;
+}
+
+div.form-field #form-date {
+  width: 60%;
+}
+
+div.form-field input[type="text"],
+div.form-field input[type="number"] {
+  float: right;
+  margin-right: 30px;
+  width: 220px;
+  height: 30px;
+  border: 1px solid #dfe2e6;
+  border-radius: 5px;
+}
+
+div.form-field input[type="date"] {
+  width: 130px;
+  height: 30px;
+  border: 1px solid #dfe2e6;
+  border-radius: 5px;
+}
+
+div.form-field label {
+  color: #013144;
+  font-weight: 100;
+  font-size: 14px;
+}
+
+div.form-field .left label {
+  line-height: 30px;
+}
+
+div.form-field .left input[type="radio"] {
+  margin: 0 0 0 5px;
+}
+
 /* MEDIA QUERIES */
 
 @media (max-width: 738px) {
@@ -171,19 +273,33 @@ main .section button {
     display: block;
     text-align: left;
   }
-}
 
-/* FOOTER */
+  main .section {
+    overflow: hidden;
+  }
 
-footer {
-  background-color: #013144;
-  height: 100px;
-  text-align: center;
-}
+  /* CREATE ACCOUNT MEDIA QUERIES */
 
-footer p {
-  line-height: 100px;
-  font-size: 16px;
-  color: #e8ebec;
-  margin-top: 0;
+  .section .form-title {
+    padding-top: 10px;
+  }
+
+  .form-section {
+    margin: 0 auto;
+    max-width: 380px;
+    padding: 0 0 0 20px;
+  }
+
+  .form-section-title {
+    text-align: center;
+  }
+
+  div.form-field {
+    min-width: 380px;
+  }
+
+  div.form-field input[type="text"],
+  div.form-field input[type="number"] {
+    margin-right: 20px;
+  }
 }
