--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -57,15 +57,19 @@ header .header-links a {
   font-size: 16px;
 }
 
-header .header-links a:hover {
+header .header-links .pre-login-link:hover {
   font-weight: bold;
   color: #013144;
 }
 
 /* SECTION */
 
+main {
+  overflow: auto;
+}
+
 main .section {
-  height: 467px;
+  /* min-height: 467px; */
 }
 
 main .section .form-input {
@@ -111,8 +115,11 @@ main .section .form-input div label {
 }
 
 main .section button {
-  width: 250px;
   float: right;
+}
+
+main .section .form-button {
+  min-width: 250px;
   height: 50px;
   font-size: 20px;
   color: #e8ebec;
@@ -128,6 +135,8 @@ footer {
   background-color: #013144;
   height: 100px;
   text-align: center;
+  /* margin-top: 244px; */
+  margin-top: calc(100vh - 643px);
 }
 
 footer p {
@@ -155,14 +164,26 @@ footer p {
 }
 
 .create-acc-form {
-  height: calc(100% - 83px);
+  /* height: calc(100% - 83px); */
   padding-top: 10px;
   margin-bottom: 0;
 }
 
-.form-section {
+.create-acc-form button.form-button {
+  float: none;
+  margin: 0 auto;
+  display: block;
+}
+
+/* .form-section {
   margin-top: 20px;
   height: 35%;
+  padding: 0 0 0 10px;
+} */
+
+.form-section {
+  margin-top: 20px;
+  height: 148px;
   padding: 0 0 0 10px;
 }
 
@@ -189,12 +210,17 @@ div.form-field #form-gender {
   width: 40%;
 }
 
+div.form-field #form-gender span {
+  padding-left: 5px;
+}
+
 div.form-field #form-date {
   width: 60%;
 }
 
 div.form-field input[type="text"],
-div.form-field input[type="number"] {
+div.form-field input[type="number"],
+div.form-field input[type="tel"] {
   float: right;
   margin-right: 30px;
   width: 220px;
@@ -210,7 +236,8 @@ div.form-field input[type="date"] {
   border-radius: 5px;
 }
 
-div.form-field label {
+div.form-field label,
+div.form-field #form-gender span {
   color: #013144;
   font-weight: 100;
   font-size: 14px;
@@ -257,7 +284,7 @@ div.form-field .left input[type="radio"] {
 
   main .section .form-input {
     width: 250px;
-    height: 100%;
+    /* height: 100%; */
     margin: auto;
     padding-top: 20px;
     padding-right: 0;
@@ -281,13 +308,14 @@ div.form-field .left input[type="radio"] {
   /* CREATE ACCOUNT MEDIA QUERIES */
 
   .section .form-title {
-    padding-top: 10px;
+    padding-top: 40px;
   }
 
   .form-section {
     margin: 0 auto;
     max-width: 380px;
     padding: 0 0 0 20px;
+    height: 36.48%;
   }
 
   .form-section-title {
@@ -299,7 +327,14 @@ div.form-field .left input[type="radio"] {
   }
 
   div.form-field input[type="text"],
-  div.form-field input[type="number"] {
-    margin-right: 20px;
+  div.form-field input[type="number"],
+  div.form-field input[type="tel"] {
+    margin-right: 40px;
+  }
+
+  /* FOOTER */
+
+  footer {
+    margin-top: calc(100vh - 435px);
   }
 }
