--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -165,6 +165,8 @@ header {
   padding-left: 5px;
 }
 
+/********** DASHBOARD PAGE ***************/
+
 /******* ACCOUNT DETAILS SECTION *******/
 
 .account-details {
@@ -271,6 +273,73 @@ header {
 }
 
 .display-full-div .trns-details-mid {
+  width: 50%;
+  float: left;
+  text-align: center;
+}
+
+/************** ACCOUNTS LIST PAGE ***********/
+
+#accounts-list {
+  padding: 20px 0;
+  overflow: auto;
+}
+
+.accounts-list-div {
+  max-width: 900px;
+  margin: 0 auto;
+  /* overflow: auto; */
+  padding: 0 20px 20px 20px;
+  border: 2px solid #ffffff;
+}
+
+#accounts-list .accounts-list-div .acc-list-title {
+  font-size: 14px;
+  line-height: 30px;
+  border-bottom: 1px solid #ffffff;
+  color: #616263;
+  text-transform: uppercase;
+}
+
+#accounts-list .accounts-list-div p {
+  /* width: 100%; */
+  line-height: 50px;
+  color: #013144;
+  border-bottom: 1px solid #013144;
+  font-size: 18px;
+  /* padding-left: 10px; */
+  margin-top: 0;
+  margin-bottom: 0px;
+}
+
+#accounts-list .acc-list-details {
+  height: 500px;
+  overflow: auto;
+}
+
+.accounts-list-div ul {
+  padding: 0;
+  margin: 0;
+}
+
+.accounts-list-div ul li {
+  list-style: none;
+  display: inline;
+}
+
+.display-full-div .acc-list-val-0 {
+  width: 15%;
+  float: left;
+  text-align: center;
+}
+
+.display-full-div .acc-list-val-1 {
+  width: 20%;
+  float: left;
+  text-align: center;
+}
+
+.display-full-div .acc-list-val-2 {
   width: 50%;
   float: left;
   text-align: center;
@@ -401,5 +470,11 @@ footer p {
     width: 40%;
     float: left;
     text-align: center;
+  }
+
+  /****** Accounts List *********/
+
+  #accounts-list .accounts-list-div p {
+    font-size: 12px;
   }
 }
