--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -197,6 +197,7 @@ header {
   overflow: auto;
   padding: 20px;
   border: 2px solid #ffffff;
+  background-color: #ffffff;
 }
 
 .display-full-div {
@@ -210,7 +211,7 @@ header {
 
 .acc-details-title {
   font-size: 14px;
-  border-bottom: #ffffff 2px solid;
+  border-bottom: #616263 1px solid;
 }
 
 .acc-details-val {
@@ -291,12 +292,13 @@ header {
   /* overflow: auto; */
   padding: 0 20px 20px 20px;
   border: 2px solid #ffffff;
+  background-color: #ffffff;
 }
 
 #accounts-list .accounts-list-div .acc-list-title {
   font-size: 14px;
   line-height: 30px;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #616263;
   color: #616263;
   text-transform: uppercase;
 }
@@ -343,6 +345,38 @@ header {
   width: 50%;
   float: left;
   text-align: center;
+}
+
+/****** ACCOUNT RECORD PAGE *******/
+#account-record .details-div p {
+  width: 100%;
+  height: 50px;
+  color: #013144;
+  /* border: 1px solid #013144; */
+  font-size: 18px;
+  /* padding-left: 10px; */
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.acc-rec-btn {
+  height: 50px;
+  font-size: 18px;
+  color: #e8ebec;
+  width: 45%;
+  float: left;
+  text-transform: uppercase;
+}
+
+.delete-acc-btn {
+  background-color: #f84e4e;
+  border: 1px solid #f84e4e;
+  margin-right: 10px;
+}
+
+.acc-rec-back-btn {
+  background-color: #9ec7e0;
+  border: 1px solid #9ec7e0;
 }
 
 /******* FOOTER *******/
