Wrap Activate and Delete buttons in forms

--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -445,6 +445,10 @@ header {
   text-transform: uppercase;
 }
 
+.display-half-div form {
+  display: inline;
+}
+
 /****** DEPOSIT & WITHDRAWALS *******/
 
 #deposit-withdraw {
